переписан синтаксис - реализован под него транслятор - переписаны под новый синтаксис примеры