@@ -1,6 +1,6 @@
 package ru.kornevgen;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
 
 import java.math.BigInteger;
 import java.text.DecimalFormat;
@@ -8,43 +8,7 @@ import java.text.NumberFormat;
 
 import org.junit.Test;
 
-public class BitLenTests
-{
-	@Test
-	public final void b1()
-	{
-		assertEquals( 1, BitLen.bitlen( new StringBuffer( "1" ) ) );
-	}
-	
-	@Test
-	public final void b2()
-	{
-		assertEquals( 2, BitLen.bitlen( new StringBuffer( "2" ) ) );
-	}
-	
-	@Test
-	public final void b0()
-	{
-		assertEquals( 1, BitLen.bitlen( new StringBuffer( "0" ) ) );
-	}
-	
-	@Test
-	public final void b64()
-	{
-		assertEquals( 64, BitLen.bitlen( new StringBuffer( "12380724755245972077" ) ) );
-	}
-	
-	@Test
-	public final void b31()
-	{
-		assertEquals( 31, BitLen.bitlen( new StringBuffer( "1162968746" ) ) );
-	}
-	
-	@Test
-	public final void b46()
-	{
-		assertEquals( 46, BitLen.bitlen( new StringBuffer( "62584826190511" ) ) );
-	}
+public class ToBigIntegerTests {
 	
 	@Test
 	public final void trans1()
@@ -95,13 +59,14 @@ public class BitLenTests
 			);
 	}
 	
-	@Test
-	public final void trans3()
-	{
-		for( long i = 57894857; i < 67994857; i++ )
-			assertEquals( 
-					BigInteger.valueOf( i ),
-					BitLen.toBigInteger( new StringBuffer( new Long(i).toString() )  )
-				);
-	}
+//	@Test
+//	public final void trans3()
+//	{
+//		for( long i = 57894857; i < 67994857; i++ )
+//			assertEquals( 
+//					BigInteger.valueOf( i ),
+//					BitLen.toBigInteger( new StringBuffer( new Long(i).toString() )  )
+//				);
+//	}	
+
 }
